--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>CV - Philip Mckinney</title>
-    <link rel="icon" type="image/x-icon" href="cv.ico">
-    <link rel="stylesheet" type="text/css" href="ESTILO.css">
+    <link rel="icon" type="image/x-icon" href="/img/cv.ico">
+    <link rel="stylesheet" type="text/css" href="/css/ESTILO.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <meta property="og:title" content="Curriculm Vitae - Philip Mckinney" />
     <meta property="og:type" content="article" />
@@ -58,7 +58,7 @@
         
         
          <h2>
-            <img src="PM.jpg" high="300px" width="300px">
+            <img src="/img/PM.jpg" high="300px" width="300px">
             <title>Philip Mckinney</title> 
             <footer>
             <h1>Empresario</h1> 
