--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>CV - Philip Mckinney</title>
     <link rel="icon" type="image/x-icon" href="/img/cv.ico">
-    <link rel="stylesheet" type="text/css" href="/css/ESTILO.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <meta property="og:title" content="Curriculm Vitae - Philip Mckinney" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content=" http://www.example.com" />
-    <meta property="og:image" content=" http://example.com/image.jpg" />
-    <meta property="og:description" content="Curriculm Vitae - Philip Mckinney" />
-    </head>
+    <link rel="stylesheet"  href="/css/ESTILO.css">
+	</head>
+
 
   <style>
 
