--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/img/cv.ico">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <meta property="og:title" content="Curriculm Vitae - Philip Mckinney" />
-    <link rel="stylesheet"  href="/css/ESTILO.css">
+    <link rel="stylesheet"  href="style.css">
 	</head>
 
 
