--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         
          <h2>
-            <img src="/img/PM.jpg" high="300px" width="300px">
+            <img src="img/PM.jpg" high="300px" width="300px">
             <title>Philip Mckinney</title> 
             <footer>
             <h1>Empresario</h1> 
