--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>CV - Philip Mckinney</title>
-    <link rel="icon" type="image/x-icon" href="/img/cv.ico">
+    <link rel="icon" type="image/x-icon" href="img/cv.ico">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <meta property="og:title" content="Curriculm Vitae - Philip Mckinney" />
     <link rel="stylesheet"  href="style.css">
