--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@ En resumen, Philip McKinney es una persona eminente y altamente respetada en la 
 
    <footer>
             <ul>
-            <h2>Contacto</h2>
             <li><a href="https://wa.me/+54261543678"><img src="whatsapp.png" width="30px" height="30px"> </a></li>
             <li><a href="https://luc14n088.github.io/proyecto_final"><img src="navegador.png" width="30px" height="30px"> </a></li></li>
             <li><a href="mailto:info@philipmckinney.com.ar"><img src="email.png" width="30px" height="30px"> </a></li>
-            <li><a href="instagram.com/philipmckinney"><img src="instagram.png" width="30px" height="30px"> </a></li>
-            <li><a href="linkedin.com/philipmckinney"><img src="linkedin.png" width="30px" height="30px"> </a></li>    
+            <li><a href="https://instagram.com/philipmckinney"><img src="instagram.png" width="30px" height="30px"> </a></li>
+            <li><a href="https://linkedin.com/philipmckinney"><img src="linkedin.png" width="30px" height="30px"> </a></li>    
         </ul>
     </footer>
 
