--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <body>
 	<header>
 		<img class="perfil" align="left" src="PM.jpg">
-		<h1 align="center">Curriculum Vitae</h1>
-		<h1 align="center">Philip Mckinney </h1>
+		<h1 align="center" style="-webkit-text-stroke:1px black; color:rgb(212, 175, 55);">Curriculum Vitae - Philip Mckinney</h1>
 		<nav class="menu">
 						<ul>
 							<li><button class="bt2" onclick="showDiv1()">Sobre Mí</button></li>
