--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 </head>
 <body>
 	<header>
-		<img class="perfil" align="left" src="PM.jpg">
+		<div class="tooltip"><img class="perfil" align="left" src="PM.jpg">
+  <span class="tooltiptext">Philip Mckinney<br><br>50 años<br><br>Lic. Ciencias Económicas<br><br></span>
+</div>
 		<h1 align="center" style="-webkit-text-stroke:1px black; color:rgb(212, 175, 55);">Curriculum Vitae - Philip Mckinney</h1>
+		
 		<nav class="menu">
 						<ul>
 							<li><button class="bt2" onclick="showDiv1()">Sobre Mí</button></li>
@@ -81,11 +84,12 @@ En resumen, Philip McKinney es una persona eminente y altamente respetada en la 
 
    <footer>
             <ul>
-            <li><a href="https://wa.me/+54261543678"><img src="whatsapp.png" width="30px" height="30px"> </a></li>
-            <li><a href="https://luc14n088.github.io/proyecto_final"><img src="navegador.png" width="30px" height="30px"> </a></li></li>
-            <li><a href="mailto:info@philipmckinney.com.ar"><img src="email.png" width="30px" height="30px"> </a></li>
-            <li><a href="https://instagram.com/philipmckinney"><img src="instagram.png" width="30px" height="30px"> </a></li>
-            <li><a href="https://linkedin.com/philipmckinney"><img src="linkedin.png" width="30px" height="30px"> </a></li>    
+            <h2>Contacto</h2>
+            <li><a href="+54261543678"><img src="whatsapp.png" width="30px" height="30px"> </a></li>
+            <li><a href="www.philipmckinney.com.ar"><img src="navegador.png" width="30px" height="30px"> </a></li></li>
+            <li><a href="info@philipmckinney.com.ar"><img src="email.png" width="30px" height="30px"> </a></li>
+            <li><a href="@philipmckinney"><img src="instagram.png" width="30px" height="30px"> </a></li>
+            <li><a href="@philipmckinney"><img src="linkedin.png" width="30px" height="30px"> </a></li>    
         </ul>
     </footer>
 
