--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ En resumen, Philip McKinney es una persona eminente y altamente respetada en la 
             <li><a href="https://luc14n088.github.io/proyecto_final/"><img src="navegador.png" width="30px" height="30px"> </a></li></li>
             <li><a href="mailto:info@philipmckinney.com.ar"><img src="email.png" width="30px" height="30px"> </a></li>
             <li><a href="https://instagram.com/philipmckinney"><img src="instagram.png" width="30px" height="30px"> </a></li>
-            <li><a href="https://linjedin.com/philipmckinney"><img src="linkedin.png" width="30px" height="30px"> </a></li>    
+            <li><a href="https://linkedin.com/philipmckinney"><img src="linkedin.png" width="30px" height="30px"> </a></li>    
         </ul>
     </footer>
 
